// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`functions.coffee 1`] = `
() ->

->

=>

class A
  b: ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
() ->

() ->

() =>

class A
  b: () ->

`;

exports[`functions.coffee 2`] = `
() ->

->

=>

class A
  b: ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
->

->

=>

class A
  b: ->

`;
